# meriti

./: .gitignore  Makefile  README.md  data.sh  profile.md  profile.sh  pyproject.toml  sweep.sh  sweep.yaml
notebooks/: meriti_image_segment.ipynb  tests.py
src/: main.py  main_nvtx.py
src/conf/: config.yaml
src/remote_segmentation/: architectures.py  dataset.py  eval.py  metrics.py  models.py  preprocessing.py  training.py  utils.py
tests/: architectures.py
