[project]
name = "meriti"
version = "0.1.0"
description = "An attempt at the remote segmentation task required for Meriti ML Engineer role."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    'black>=25.1.0',
    'loguru==0.7.3',
    'matplotlib>3.5',
    'nvtx==0.2.15',
    'opencv-python>=4.12.0',
    'pillow>=11.1.0',
    'plotly==6.6.0',
    'rich>=13.9.4',
    'ruff>=0.15.7',
    'scikit-learn>=1.6.1',
    'torch>=2.8.0',
    'torchinfo>=1.8.0',
    'torchvision>=0.21',
    'hydra-core>=1.3.2',
    'wandb>=0.25.1'
]

